# mdbook-lint

./: .dockerignore  .gitattributes  .gitignore  .mdbook-lint.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  PROFILING.md  README.md  RELEASE.md  RELEASE_RETROSPECTIVE.md  action.yml  benchmark.sh  cliff.toml  crates.js  dist-workspace.toml  example-mdbook-lint.toml  fix_clippy.sh  help.html  index.html  install.sh  release-please-config.json  release-plz.toml  run.sh  search-index.js  settings.html  setup-hooks.sh  src-files.js
.githooks/: pre-commit  pre-commit-light
.github/workflows/: ci.yml  corpus-nightly.yml  corpus-testing.yml  docker.yml  docs.yml  mdbook-compatibility.yml  release-automation.yml  release-binaries.yml  release-please.yml  release-plz.yml  release.yml  simple-release.yml  test-action.yml
crates/mdbook-lint-cli/: Cargo.toml  example-mdbook-lint.toml
crates/mdbook-lint-cli/src/: batch1_rule_config_test.rs  config 2.rs  config.rs  error.rs  lib.rs  lsp_server.rs  main.rs  mdbook_ignore_config_test.rs  output.rs  preprocessor.rs  registry.rs  rule_config_test.rs  rustdoc.rs  test_helpers.rs
crates/mdbook-lint-cli/src/rules/: mdbook003.rs  mdbook004.rs  mdbook005.rs  standard.rs
crates/mdbook-lint-cli/src/rules/standard/: md005.rs  md006.rs  md008.rs  md019.rs  md022.rs  md026.rs  md033.rs  md036.rs  md037.rs  md052.rs  md056.rs
crates/mdbook-lint-cli/tests/: batch2_rule_config_test.rs  batch3_rule_config_test.rs  batch4_rule_config_test.rs  corpus_integration_test.rs  corpus_tests.rs  duplicate_violations_test.rs  fix_functionality_tests.rs  mdbook_integration_tests.rs  performance_regression_test.rs  rules_command_tests.rs  ruleset_scenarios_test.rs  rustdoc_command_tests.rs  simple_corpus_tests.rs  simple_performance_tests.rs
crates/mdbook-lint-cli/tests/common/: mod.rs
crates/mdbook-lint-cli/tests/fixtures/comprehensive/: admonitions-test.md  extended-features-test.md  markdown-core-test.md  mdbook-features-test.md  mermaid-test.md
crates/mdbook-lint-cli/tests/fixtures/edge_cases/: katex_math.md
crates/mdbook-lint-cli/tests/fixtures/markdown/: SUMMARY.md  mdbook_clean.md  mdbook_violations.md
crates/mdbook-lint-cli/tests/fixtures/mdbook/: minimal_input.json  minimal_input_v05.json  nested_chapters_v04.json  nested_chapters_v05.json  violations_input_v05.json
crates/mdbook-lint-cli/tests/fixtures/real_books/minimal_book/: book.toml  debug_input_1754258475.json
crates/mdbook-lint-cli/tests/fixtures/real_books/minimal_book/src/: SUMMARY.md  chapter1.md  intro.md
crates/mdbook-lint-cli/tests/fixtures/real_books/violations_book/: debug_input_1754258631.json
crates/mdbook-lint-cli/tests/fixtures/real_books/violations_book/src/: SUMMARY.md  appendix.md  chapter_violations.md  intro.md  missing.md  subsection.md
crates/mdbook-lint-core/: Cargo.toml
crates/mdbook-lint-core/src/: config.rs  deduplication.rs  document.rs  engine.rs  error.rs  lib.rs  registry.rs  rule.rs  rules.rs  standard_provider.rs  test_helpers.rs  violation.rs
crates/mdbook-lint-core/src/rules/: mdbook001.rs  mdbook002.rs  mdbook004.rs  mdbook005.rs  mdbook006.rs  mdbook007.rs  mdbook025.rs
crates/mdbook-lint-core/src/rules/standard/: md001.rs  md002.rs  md004.rs  md005.rs  md006.rs  md007.rs  md010.rs  md011.rs  md013.rs  md014.rs  md015.rs  md017.rs  md018.rs  md020.rs  md021.rs  md022.rs  md023.rs  md024.rs  md025.rs  md026.rs  md028.rs  md029.rs  md030.rs  md031.rs  md032.rs  md034.rs  md035.rs  md036.rs  md038.rs  md039.rs  md040.rs  md044.rs  md045.rs  md046.rs  md047.rs  md048.rs  md049.rs  md050.rs  md051.rs  md052.rs  (+6 more)
crates/mdbook-lint-rulesets/: Cargo.toml
crates/mdbook-lint-rulesets/proptest-regressions/: proptests.txt
crates/mdbook-lint-rulesets/src/: lib.rs  proptests.rs
crates/mdbook-lint-rulesets/src/adr/: adr001.rs  adr002.rs  adr003.rs  adr004.rs  adr005.rs  adr006.rs  adr007.rs  adr008.rs  adr009.rs  adr010.rs  adr011.rs  adr012.rs  adr013.rs  adr014.rs  adr015.rs  adr016.rs  adr017.rs  format.rs  frontmatter.rs  mod.rs
crates/mdbook-lint-rulesets/src/content/: content001.rs  content002.rs  content003.rs  content004.rs  content005.rs  content006.rs  content007.rs  content009.rs  content010.rs  content011.rs  mod.rs
crates/mdbook-lint-rulesets/src/mdbook/: mdbook001.rs  mdbook002.rs  mdbook003.rs  mdbook004.rs  mdbook005.rs  mdbook006.rs  mdbook007.rs  mdbook008.rs  mdbook009.rs  mdbook010.rs  mdbook011.rs  mdbook012.rs  mdbook016.rs  mdbook017.rs  mdbook021.rs  mdbook022.rs  mdbook023.rs  mdbook025.rs  mod.rs
crates/mdbook-lint-rulesets/src/standard/: md001.rs  md002.rs  md003.rs  md004.rs  md005.rs  md006.rs  md007.rs  md008.rs  md009.rs  md010.rs  md011.rs  md012.rs  md013.rs  md014.rs  md015.rs  md016.rs  md017.rs  md018.rs  md019.rs  md020.rs  md021.rs  md022.rs  md023.rs  md024.rs  md025.rs  md026.rs  md027.rs  md028.rs  md029.rs  md030.rs  md031.rs  md032.rs  md033.rs  md034.rs  md035.rs  md036.rs  md037.rs  md038.rs  md039.rs  md040.rs  (+21 more)
debug_preprocessor/: all.html  fn.main.html  index.html
docs/: .gitignore  .mdbook-lint.toml  book.toml
docs/src/: SUMMARY.md  api-documentation.md  architecture.md  ci-vs-preprocessor.md  cli-usage.md  compatibility.md  configuration-reference.md  configuration.md  contributing.md  example-configuration.md  getting-started.md  installation.md  introduction.md  library-api.md  mdbook-integration.md  rules-reference.md  (+4 more)
mdbook_lint/: all.html  constant.DESCRIPTION.html  constant.NAME.html  constant.VERSION.html  fn.create_engine_with_all_rules.html  fn.create_mdbook_engine.html  fn.create_standard_engine.html  index.html  sidebar-items.js
scripts/: compare_with_markdownlint.sh  download-corpus.sh  setup_corpus.sh  setup_labels.sh
src/: config.rs  deduplication.rs  document.rs  engine.rs  error.rs  lib.rs  main.rs  preprocessor.rs  registry.rs  rules.rs  violation.rs
tests/: README.md  corpus_integration_test.rs  corpus_tests.rs  duplicate_violations_test.rs  mdbook_integration_tests.rs  ruleset_scenarios_test.rs
(+489 files in other folders)
