
[workspace]
resolver = "2"
members = [
    "crates/mdbook-lint-core",
    "crates/mdbook-lint-rulesets",
    "crates/mdbook-lint-cli",
]

[workspace.package]
version = "0.11.4"
edition = "2024"
rust-version = "1.88"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/mdbook-lint"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.5"

# Markdown parsing
comrak = "0.21"

# CLI
clap = { version = "4.0", features = ["derive"] }

# mdBook integration
mdbook = { version = "0.4", default-features = false }

# Utilities
walkdir = "2.3"

# Internal workspace crates
mdbook-lint-core = { version = "0.11.4", path = "crates/mdbook-lint-core" }
mdbook-lint-rulesets = { version = "0.11.4", path = "crates/mdbook-lint-rulesets" }

# Dev dependencies
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.5"
which = "4.0"
