[package]
name = "mdbook-lint-rulesets"
description = "Modular rulesets for mdbook-lint - standard and mdBook-specific linting rules"
keywords = ["markdown", "linter", "mdbook", "rules", "rulesets"]
categories = ["development-tools", "text-processing"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mdbook_lint_rulesets"
path = "src/lib.rs"

[features]
default = ["standard", "mdbook", "content"]
standard = []  # Standard markdown rules (MD001-MD059)
mdbook = ["dep:mdbook"]   # mdBook-specific rules (MDBOOK001-025)
content = []  # Content quality rules (CONTENT001-005)
adr = ["dep:serde_yaml"]  # ADR (Architecture Decision Record) rules (ADR001-019)

[dependencies]
# Local workspace crates
mdbook-lint-core = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Markdown parsing
comrak = { workspace = true }

# mdBook integration (for mdbook rules)
mdbook = { workspace = true, optional = true }

# YAML parsing (for ADR rules)
serde_yaml = { workspace = true, optional = true }

# Utilities
walkdir = { workspace = true }
regex = "1.10"
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = "1.5"
